AGRE-2111: Implemented CountryProperty and used it for best contact time
(cherry picked from commit fb6c4fb78c2d82f1c13bec83f54e5d5df7dc66a1)
